--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;700;900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap" rel="stylesheet">
     <link rel="icon" href="assets/favicon.ico">
-    <link rel="stylesheet" href="stylee.css">
+    <link rel="stylesheet" href="style.css">
     <title>CV</title>
 </head>
 <body>
@@ -46,10 +46,10 @@
                             <div class="main-block__contact">
                                <ul class="contact-list">
                                   <li class="contact-item">
-                                      <a href="https://github.com/hppd0" class="contact-link"><img src="assets/Img/github-icon.svg" alt="github icon" class="contact-link__icon"></a>
+                                      <a href="https://github.com/hppd0" class="contact-link"><img src="assets/img/github-icon.svg" alt="github icon" class="contact-link__icon"></a>
                                   </li>
                                   <li class="contact-item">
-                                     <a href="https://t.me/hppd0" class="contact-link"><img src="assets/Img/telegram-icon.svg" alt="telegram icon" class="contact-link__icon"></a>
+                                     <a href="https://t.me/hppd0" class="contact-link"><img src="assets/img/telegram-icon.svg" alt="telegram icon" class="contact-link__icon"></a>
                                  </li>
                               </ul>    
                             </div>                        
@@ -82,7 +82,7 @@
                             I like to create something new with my own. I used to think that design suits me. But then I realized that I wanted something less creative and more technical. I have experience in web-design, so I decided to continue working on websites. I hope I will be great fronted developer.
                         </div>
                     </div>
-                    <img src="assets/Img/quotes.svg" alt="bg-img" class="bg-img">
+                    <img src="assets/img/quotes.svg" alt="bg-img" class="bg-img">
                 </div>
             </section> 
             <section class="code" id="code">
@@ -143,7 +143,7 @@
             <div class="footer__container container">
                 <div class="footer-column">
                     <div class="footer-item footer-item__link">
-                        <a href=https://rs.school/js-stage0/ class="rsschool-link"><img src="assets/Img/rssicon.svg" width="138" 
+                        <a href=https://rs.school/js-stage0/ class="rsschool-link"><img src="assets/img/rssicon.svg" width="138" 
                             height="50" alt="github icon"></a>
                     </div>
                     <div class="footer-item">
